# StudentGradeCalculator

./: CMakeLists.txt  FileGenerator.cpp  FileGenerator.h  Makefile  Person.cpp  Person.h  README.md  Utilities.cpp  Utilities.h  main.cpp  run.sh  student_grades  students.txt
